--- a/sources/scan-document-api/pom.xml
+++ b/sources/scan-document-api/pom.xml
@@ -17,7 +17,6 @@
     <properties>
         <java.version>1.8</java.version>
         <morena.version.six>6.0</morena.version.six>
-        <morena.version.seven>7.0</morena.version.seven>
     </properties>
 
     <dependencies>
@@ -38,7 +37,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
@@ -46,11 +44,18 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lowagie</groupId>
-            <artifactId>itext</artifactId>
-            <version>2.1.7</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.directory.studio/org.apache.commons.io -->
+        <dependency>
+            <groupId>org.apache.directory.studio</groupId>
+            <artifactId>org.apache.commons.io</artifactId>
+            <version>2.4</version>
         </dependency>
 
+        <!-- morena-6 -->
         <dependency>
             <groupId>morena-6</groupId>
             <artifactId>morena-6</artifactId>
@@ -91,6 +96,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
